--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Contact Us</h1>
+        <img src="./Images/mojave-desert-parks-protected-areas_orig.jpg" alt="Mojace Desert">
     </header>
     <nav>
         <ul>
@@ -48,4 +49,7 @@
         <p>Phone: (123) 456-7890</p>
     </aside>
 </body>
+<footer>
+    <p>© Goss D277</p>
+</footer>
 </html>
