--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         <p>Capital: Sacramento</p>
         <p>Population: 39.24 million (2021)</p>
     </aside>
+    
+    <div id="special-section">
+        <h3>Welcome to the Site!</h3>
+        <p>Check out the pages, and contact us with any questions!</p>
+    </div>
+    
     <footer>
         <p>© Goss D277</p>
     </footer>
