--- a/surf-conditions.html
+++ b/surf-conditions.html
@@ -84,6 +84,17 @@
             </ul>
         </div>
     </section>
+    
+    <aside>
+        <h3>Did You Know?</h3>
+        <p>California is home to some of the most famous surf spots in the world. From the iconic waves of Malibu to the challenging swells of Mavericks, there's something for every surfer in the Golden State.</p>
+    </aside>
+
+    <div id="special-section">
+        <h3>SURF CONDITIONS</h3>
+        <p>Check out update surf conditions for the top 5 Surf spots in California!</p>
+    </div>
+
     <footer>
         <p>© Goss D277</p>
     </footer>
