--- a/avalon.html
+++ b/avalon.html
@@ -49,7 +49,7 @@
     </section>
     
     <aside>
-        <h3>Interesting Fact</h3>
+        <h3>Interesting Fact!</h3>
         <p>Avalon is the only incorporated city on Santa Catalina Island, which is known for its vibrant marine life and crystal-clear waters. The island was developed into a resort destination by William Wrigley Jr., the chewing gum magnate.</p>
     </aside>
 
