--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         <p>Population: 39.24 million (2021)</p>
     </aside>
     
-    <div id="special-section">
-        <h3>Welcome to the Site!</h3>
-        <p>Check out the pages, and contact us with any questions!</p>
+     <div id="special-section">
+        <h3>Eureka!</h3>
+        <p>You have found this page dedicated to the state of California!</p>
     </div>
     
     <footer>
